--- a/.github/workflows/build-push-action.yml
+++ b/.github/workflows/build-push-action.yml
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: robertdebock/rockylinux:${{ env.tag }}
+          tags: zasfe/rockylinux:${{ env.tag }}
