--- a/.github/workflows/build-push-action.yml
+++ b/.github/workflows/build-push-action.yml
@@ -1,28 +1,52 @@
-name: build-push
+---
+name: Build
 
 on:
+  pull_request:
   push:
+    branches:
+      - '**'
+      - '!test*'
+#  schedule:
+#    - cron: "10 1 * * 0"
 
 jobs:
-  docker:
+  # Test the image builds and works correctly.
+  test:
+    name: Test
     runs-on: ubuntu-latest
+
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - uses: actions/checkout@v2
+
+      - name: Test building image.
+        run: docker build -t docker-rockylinux-systemd .
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Set short
-        run: echo "short=${GITHUB_REF##*/}" >> "${GITHUB_ENV}"
-      - name: Set tag
-        run: echo "tag=${short/master/latest}" >> "${GITHUB_ENV}"
-      - name: Build and push
-        id: docker_build
+
+      - name: Set Tags
+        run: |
+          cat tags >> $GITHUB_ENV 
+
+      - name: Build and push image.
         uses: docker/build-push-action@v2
         with:
+          context: ./
+          file: Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: zasfe/rockylinux:${{ env.tag }}
+          tags: ${{ env.tags }}
